# waypy

./: main.py  pyproject.toml
src/waypi_tui/: tui.py
src/waypy/: __init__.py  cli.py
src/waypy_cli/: cli.py  cli.sync-conflict-20250705-123716-DFHUFFA.py
